--- a/Yukari/src/main/res/values-v21/themes_yukaritheme.xml
+++ b/Yukari/src/main/res/values-v21/themes_yukaritheme.xml
@@ -48,6 +48,9 @@
         <item name="colorPrimary">@color/key_color</item>
         <item name="colorPrimaryDark">@color/key_color_2</item>
         <item name="colorAccent">@color/bg_mention</item>
+        <item name="android:colorPrimary">@color/key_color</item>
+        <item name="android:colorPrimaryDark">@color/key_color_2</item>
+        <item name="android:colorAccent">@color/bg_mention</item>
 
         <item name="android:textColor">@color/black</item>
 
