TweetActivityのアカウント名の所以外は色ついたと思う

--- a/Yukari/src/main/res/layout/row_statuslink.xml
+++ b/Yukari/src/main/res/layout/row_statuslink.xml
@@ -14,7 +14,7 @@
             android:id="@+id/statuslink_category"
             android:layout_gravity="left|center_vertical"
             android:autoText="false"
-            android:background="#7849ba"
+            android:background="?attr/colorPrimary"
             android:textColor="#fff"
             android:visibility="gone"
             android:paddingLeft="8dp"
