--- a/Yukari/src/main/res/drawable/button_status.xml
+++ b/Yukari/src/main/res/drawable/button_status.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="?attr/colorPrimary"/>
-            <stroke android:width="1dp" android:color="?attr/colorPrimaryDark"/>
+            <solid android:color="@color/key_color"/>
+            <stroke android:width="1dp" android:color="@color/key_color_2"/>
             <padding
                 android:top="@dimen/status_button_padding"
                 android:left="@dimen/status_button_padding"
