--- a/Yukari/src/main/res/drawable/button_status_account.xml
+++ b/Yukari/src/main/res/drawable/button_status_account.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="?attr/colorPrimary"/>
-            <stroke android:width="1dp" android:color="?attr/colorPrimaryDark"/>
-            <padding
+            <solid android:color="@color/key_color"/>
+              <stroke android:width="1dp" android:color="@color/key_color_2"/>
+          <padding
                 android:top="@dimen/status_button_padding"
                 android:left="@dimen/status_button_padding"
                 android:right="@dimen/status_button_padding"
