--- a/Yukari/src/main/res/layout/activity_tweet.xml
+++ b/Yukari/src/main/res/layout/activity_tweet.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -15,7 +16,7 @@
         android:layout_alignLeft="@+id/tvTweetCount"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/tvTweetBy"
+        android:layout_below="@+id/wrapTweetBy"
         android:gravity="left|top"
         android:inputType="textMultiLine"
         android:maxLines="6"
@@ -46,22 +47,29 @@
         android:textColor="?attr/tweetCountColor"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/tvTweetBy"
+    <shibafu.yukari.common.SelectorView
+        android:id="@+id/wrapTweetBy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/ivProfileHeader"
         android:layout_marginTop="8dp"
-        android:background="@drawable/selector_key_light_background"
-        android:clickable="true"
-        android:focusable="true"
         android:gravity="right"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:text=">> SELECT ACCOUNT(S)"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="?attr/selectorTextColor" />
+        app:on_pressed="?attr/pressDrawable"
+        app:on_focused="?attr/focusDrawable">
+
+        <TextView
+            android:id="@+id/tvTweetBy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:text=">> SELECT ACCOUNT(S)"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="?attr/selectorTextColor" />
+    </shibafu.yukari.common.SelectorView>
 
     <TableLayout
         android:id="@+id/tlTweetAction"
@@ -191,7 +199,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/horizontalScrollView"
-        android:layout_alignRight="@+id/tvTweetBy"
+        android:layout_alignRight="@+id/wrapTweetBy"
         android:layout_below="@+id/horizontalScrollView"
         android:layout_marginTop="4dp"
         android:orientation="vertical"
