--- a/Yukari/src/main/res/values-v11/themes_yukarilighttheme.xml
+++ b/Yukari/src/main/res/values-v11/themes_yukarilighttheme.xml
@@ -64,11 +64,13 @@
         </item>
 
         <item name="tweetTextColor">#000</item>
+        <item name="tweetPressColor">@color/bg_press</item>
+        <item name="tweetFocusColor">@color/bg_press</item>
 
-        <item name="tweetNormal">@drawable/selector_tweet_normal_background</item>
-        <item name="tweetRetweet">@drawable/selector_tweet_retweet_background</item>
-        <item name="tweetOwn">@drawable/selector_tweet_own_background</item>
-        <item name="tweetMention">@drawable/selector_tweet_mention_background</item>
+        <item name="tweetNormal">@android:color/transparent</item>
+        <item name="tweetRetweet">@drawable/bg_retweet</item>
+        <item name="tweetOwn">@drawable/bg_own</item>
+        <item name="tweetMention">@drawable/bg_mention</item>
 
         <item name="tabTitleColor">@color/key_color</item>
 
@@ -160,11 +162,13 @@
         </item>
 
         <item name="tweetTextColor">#000</item>
+        <item name="tweetPressColor">@color/bg_press</item>
+        <item name="tweetFocusColor">@color/bg_press</item>
 
-        <item name="tweetNormal">@drawable/selector_tweet_normal_background</item>
-        <item name="tweetRetweet">@drawable/selector_tweet_retweet_background</item>
-        <item name="tweetOwn">@drawable/selector_tweet_own_background</item>
-        <item name="tweetMention">@drawable/selector_tweet_mention_background</item>
+        <item name="tweetNormal">@android:color/transparent</item>
+        <item name="tweetRetweet">@drawable/bg_retweet</item>
+        <item name="tweetOwn">@drawable/bg_own</item>
+        <item name="tweetMention">@drawable/bg_mention</item>
 
         <item name="tabTitleColor">@color/key_color</item>
 
