--- a/Yukari/src/main/res/layout/activity_asset.xml
+++ b/Yukari/src/main/res/layout/activity_asset.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="32dp" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
