ゆかりさんゆかりさん！！

--- a/Yukari/src/main/res/xml/commands.xml
+++ b/Yukari/src/main/res/xml/commands.xml
@@ -50,6 +50,9 @@
         <Preference
             android:title="::dice NdN"
             android:summary="さいころを振ります(Nにそれぞれ整数)\nexample) ::dice 1d100"/>
+        <Preference
+            android:title="::yk"
+            android:summary="ゆかりさんゆかりさん！！(n回目)"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="ジョーク機能">
         <CheckBoxPreference
