--- a/Yukari/src/main/res/layout/activity_main.xml
+++ b/Yukari/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/llMainFooterRight"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
