先頭へぽっぴんジャンプ♪判定エリア内でツイートジェスチャが効かない不具合を修正

--- a/Yukari/src/main/res/layout/activity_main.xml
+++ b/Yukari/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
+                android:focusable="false"
                 android:orientation="horizontal">
 
                 <ImageView
